added javadocJar and sourcesJar

--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,8 @@ subprojects {
     if (project.name == "Procyon.Decompiler") {
         artifacts {
             archives jar
+            archives javadocJar
+            archives sourcesJar
         }
     }
     else {
