--- a/.github/workflows/gradle-tests.yml
+++ b/.github/workflows/gradle-tests.yml
@@ -12,7 +12,9 @@ jobs:
       with:
         java-version: 8
         distribution: 'temurin'
-    - name: Setup and execute Gradle 'test' task
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: test
+ 
+    - name: Ensure Gradle wrapper is executable
+      run: chmod +x ./gradlew
+
+    - name: Run tests and generate merged JaCoCo report
+      run: ./gradlew --no-daemon clean test jacocoRootReport
