--- a/.github/workflows/gradle-tests.yml
+++ b/.github/workflows/gradle-tests.yml
@@ -7,11 +7,15 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v6
-    - uses: actions/setup-java@v5
+    - name: Checkout
+      uses: actions/checkout@v6
+
+    - name: Set up Java
+      uses: actions/setup-java@v5
       with:
-        java-version: 8
-        distribution: 'temurin'
+        distribution: temurin
+        java-version: "8"
+        cache: gradle
  
     - name: Ensure Gradle wrapper is executable
       run: chmod +x ./gradlew
