--- a/Procyon.Decompiler/build.gradle
+++ b/Procyon.Decompiler/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     compile 'com.beust:jcommander:1.82'
     compile project(':Procyon.Core')
     compile project(':Procyon.CompilerTools')
+    testCompile 'commons-io:commons-io:2.20.0'
 }
