--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -34,4 +34,6 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           files: "build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml"
+          disable_search: true
           fail_ci_if_error: true
+          verbose: true
