--- a/build.gradle
+++ b/build.gradle
@@ -293,12 +293,11 @@ task jacocoRootReport(type: JacocoReport, dependsOn: tasks.jacocoMerge) {
     project.afterEvaluate {
         // The JacocoReport tasks are the source of truth for class files and sources.
         def reportTasks = getReportTasks(tasks.jacocoRootReport)
-        classDirectories.from project.files({
-            reportTasks.collect {it.classDirectories}.findAll {it != null}
-        })
-        sourceDirectories.from project.files({
-            reportTasks.collect {it.sourceDirectories}.findAll {it != null}
-        })
+	    def allClassDirs = files(reportTasks.collectMany { it.classDirectories.files })
+	    def allSourceDirs = files(reportTasks.collectMany { it.sourceDirectories.files })
+	
+	    classDirectories.setFrom(allClassDirs)
+	    sourceDirectories.setFrom(allSourceDirs)
     }
 
     reports {
