--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,12 +28,10 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Run tests and generate merged JaCoCo report
-        run: ./gradlew --no-daemon clean test jacocoRootReport
+        run: ./gradlew --no-daemon jacocoTestReport
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
-          files: "build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml"
-          disable_search: true
           fail_ci_if_error: true
           verbose: true
