--- a/Procyon.CompilerTools/build.gradle
+++ b/Procyon.CompilerTools/build.gradle
@@ -1,7 +1,7 @@
 compileTestJava.options.encoding = 'UTF-8'
 
 dependencies {
-    compile project(':Procyon.Core')
-    testCompile project(':Procyon.Reflection')
-    testCompile files('src/test/resources')
+    implementation project(':Procyon.Core')
+    testImplementation project(':Procyon.Reflection')
+    testImplementation files('src/test/resources')
 }
